Add README.txt, update README, set z-index for bootstrap modals, remove geographic restrictions

--- a/public/css/tbtaa-public.css
+++ b/public/css/tbtaa-public.css
@@ -2,3 +2,7 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
+
+.pac-container {
+    z-index: 1051 !important;
+}
